web-infras/parser/tests/fixtures/babel/es2017/async-arrow/parenthesized-binding-identifier/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,19)
1|var foo = async ((foo)) => {};
 |                 ^
